<!-- String Formatting: https://docs.oracle.com/javase/6/docs/api/java/util/Formatter.html#syntax -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App Name -->
    <string name="app_name">Navigateur</string>

    <!-- Main Activity Buttons -->
    <string name="button_go_to_map">Go to Map</string>
    <string name="button_bluetooth_test">Bluetooth Test</string>

    <!-- Bluetooth Test Activity Buttons -->
    <string name="bluetooth_function_one">Enable Bluetooth</string>
    <string name="bluetooth_function_two">Find HC-06</string>
    <string name="bluetooth_function_three">Make Connection</string>

    <string name="test_button_a">a</string>
    <string name="test_button_b">b</string>
    <string name="test_button_c">c</string>
    <string name="test_button_d">d</string>
    <string name="test_button_e">e</string>
    <string name="test_button_f">f</string>
    <string name="test_button_g">g</string>
    <string name="test_button_h">h</string>

    <!-- Other -->
    <string name="reserved_button">(Reserved Button)</string>
    <string name="empty_text_view">(Empty Text View)</string>

    <!-- Maps Activity Name -->
    <string name="title_activity_maps">Map</string>

    <!-- Maps Activity Buttons -->
    <string name="maps_function_one">Clear Point</string>
    <string name="maps_function_two">Get Route</string>
    <string name="maps_function_three">Clear Route</string>
    <string name="maps_function_four">Start Bluetooth</string>
    <string name="maps_function_five">Send "b"</string>
    <string name="maps_function_six">Debug</string>
    <string name="maps_function_seven">Start Navigation</string>
    <string name="maps_function_seven_alt">Stop Navigation</string>

    <!-- Maps Text Box -->
    <string name="map_instructions">Select destination by long-clicking on map</string>
    <string name="map_instructions_point_pressed">
        Selected location coordinates: <xliff:g id="sel_lat">%1$f</xliff:g>, <xliff:g id="sel_lon">%2$f</xliff:g>
    </string>

    <!-- TODO: Do something like string = "\n" + string for all these newlines -->

    <!-- Bluetooth Text Box -->
    <string name="bluetooth_info_default">Bluetooth Info: Pair with and connect to HC-06</string>

    <!-- Bluetooth Alerts -->
    <string name="bluetooth_not_supported">\nDevice does not support bluetooth</string>
    <string name="bluetooth_enabled">\nBluetooth supported and already enabled</string>

    <string name="bluetooth_please_pair">\nPlease Pair the Device first</string>
    <string name="bluetooth_device_located">\nTarget HC-06 Located&#8230;</string>

    <string name="bluetooth_socket_connected">\nCreated connection socket&#8230;</string>
    <string name="bluetooth_socket_failed">\nFailed to create connection socket&#8230;</string>

    <string name="bluetooth_output_created">\nCreated output stream&#8230;</string>
    <string name="bluetooth_output_failed">\nFailed to create output stream&#8230;</string>

    <string name="bluetooth_input_created">\nCreated input stream&#8230;</string>
    <string name="bluetooth_input_failed">\nFailed to create input stream&#8230;</string>

    <string name="bluetooth_connection_established">\nConnection established to HC-06</string>
    <string name="bluetooth_connection_failed">\nConnection to HC-06 failed</string>

    <string name="bluetooth_listening">\nListening for data&#8230;</string>
    <string name="bluetooth_sent_text">\nSent data: %1$s</string>

</resources>
