<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/maps_function_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionOne"
            android:text="@string/maps_function_one" />

        <Button
            android:id="@+id/maps_function_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionTwo"
            android:text="@string/maps_function_two" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/maps_function_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionThree"
            android:text="@string/maps_function_three" />

        <Button
            android:id="@+id/maps_function_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionFour"
            android:text="@string/maps_function_four" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/maps_function_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionFive"
            android:text="@string/maps_function_five" />

        <Button
            android:id="@+id/maps_function_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="mapsFunctionSix"
            android:text="@string/maps_function_six" />

    </LinearLayout>

    <TextView
        android:id="@+id/map_instructions_text"
        android:text="@string/map_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/bluetooth_status_info"
        android:text="@string/bluetooth_info_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:gravity="bottom"/>
    <!-- TODO: May need to change maxLines -->

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.foresight.navigateur.MapsActivity" />

</LinearLayout>